--- a/.gitignore
+++ b/.gitignore
@@ -30,10 +30,7 @@ build/
 !**/src/test/**/build/
 Config.toml
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea
 *.iws
 *.iml
 *.ipr
